--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CRUD</title>
+  <script src="js/app.js" defer></script>
 </head>
 
 <body>
+  <h1>CRUD</h1>
 
 </body>
 
