postId params getPostById

--- a/single-post.html
+++ b/single-post.html
@@ -5,11 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="js/single-post.js" defer></script>
 </head>
 
 <body>
-  <div class="container">
-    <h1>Single post</h1>
+  <a href="index.html">go back</a>
+  <div id="content" class="container">
+    <h1>title</h1>
+    <p class="text">body</p>
+    <ul class="unlisted">
+      <li class="tag">tag</li>
+    </ul>
+    <p class="react">2 People liked the post</p>
   </div>
 
 </body>
