--- a/single-post.html
+++ b/single-post.html
@@ -5,18 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="js/single-post.js" defer></script>
+  <link rel="stylesheet" href="css/style.css">
+  <script type="module" src="js/single-post.js"></script>
 </head>
 
 <body>
   <a href="index.html">go back</a>
   <div id="content" class="container">
-    <h1>title</h1>
-    <p class="text">body</p>
-    <ul class="unlisted">
-      <li class="tag">tag</li>
-    </ul>
-    <p class="react">2 People liked the post</p>
+
+  </div>
+  <div class="control container">
+    <button>Edit</button>
+    <button>Delete</button>
   </div>
 
 </body>
