header in place

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-
+  <header>
+    <div class="container">
+      <a href="/" class="logo">Best<strong>Posts</strong></a>
+      <nav class="mainNav">
+        <a href="index.html" class="navLink">Home</a>
+        <a href="add-post.html" class="navLink">Add post</a>
+      </nav>
+    </div>
+  </header>
   <div class="container">
     <h1>CRUD - posts</h1>
     <button id="sort-title">sortByTitle a-z</button>
