--- a/add-post.html
+++ b/add-post.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
   <header>
     <div class="container">
       <a href="/" class="logo">Best<strong>Posts</strong></a>
@@ -19,7 +20,24 @@
       </nav>
     </div>
   </header>
-
+  <div class="container">
+    <h1>Creat new post</h1>
+    <form id="newPost" class="new-post">
+      <div class="inputBlock">
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required>
+      </div>
+      <div class="inputBlock">
+        <label for="body">Body:</label>
+        <textarea id="body" name="body" required></textarea>
+      </div>
+      <div class="inputBlock">
+        <label for="tags">Tags:</label>
+        <input type="text" id="tags" name="tags" placeholder="Separate tags with commas">
+      </div>
+      <button type="submit">Create</button>
+    </form>
+  </div>
 </body>
 
 </html>
