--- a/add-post.html
+++ b/add-post.html
@@ -25,11 +25,11 @@
     <form id="newPost" class="new-post">
       <div class="inputBlock">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
+        <input type="text" id="title" name="title">
       </div>
       <div class="inputBlock">
         <label for="body">Body:</label>
-        <textarea id="body" name="body" required></textarea>
+        <textarea id="body" name="body"></textarea>
       </div>
       <div class="inputBlock">
         <label for="tags">Tags:</label>
