--- a/add-post.html
+++ b/add-post.html
@@ -28,12 +28,20 @@
         <input type="text" id="title" name="title">
       </div>
       <div class="inputBlock">
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author">
+      </div>
+      <div class="inputBlock">
         <label for="body">Body:</label>
         <textarea id="body" name="body"></textarea>
       </div>
       <div class="inputBlock">
         <label for="tags">Tags:</label>
         <input type="text" id="tags" name="tags" placeholder="Separate tags with commas">
+      </div>
+      <div class="inputBlock">
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date">
       </div>
       <button type="submit">Create</button>
     </form>
