--- a/single-post.html
+++ b/single-post.html
@@ -15,8 +15,8 @@
 
   </div>
   <div class="control container">
-    <button>Edit</button>
-    <button>Delete</button>
+    <button id="edit">Edit</button>
+    <button id="delete">Delete</button>
   </div>
 
 </body>
