--- a/single-post.html
+++ b/single-post.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+  <header>
+    <div class="container">
+      <a href="/" class="logo">Best<strong>Posts</strong></a>
+      <nav class="mainNav">
+        <a href="index.html" class="navLink">Home</a>
+        <a href="add-post.html" class="navLink">Add post</a>
+      </nav>
+    </div>
+  </header>
   <a href="index.html">go back</a>
   <div id="content" class="container">
 
